# MIPT_Networked

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.hpp
Client/source/: Client.cpp
Extras/: CMakeLists.txt
Extras/include/: MessageTypes.hpp  SocketTools.hpp  dumb_stuff.hpp
Extras/include/Packet/: Packet.hpp
Extras/source/: SocketTools.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: EchoServer.hpp
Server/source/: EchoServer.cpp
hw1/: CMakeLists.txt
hw1/Client/: CMakeLists.txt  main.cpp
hw1/Client/include/: Client.hpp
hw1/Client/source/: Client.cpp
hw1/Server/: CMakeLists.txt  main.cpp
hw1/Server/include/: EchoServer.hpp
hw1/Server/source/: EchoServer.cpp
hw2/: CMakeLists.txt  main_client.cpp  main_lobby.cpp  main_play_server.cpp
hw2/include/: LobbyClient.hpp  LobbyServer.hpp  PlayingServer.hpp  Server.hpp
hw2/source/: LobbyClient.cpp  LobbyServer.cpp  PlayingServer.cpp
hw3/: CMakeLists.txt  main_client.cpp  main_play_server.cpp
hw3/include/: AgarClient.hpp  AgarGame.hpp  AgarServer.hpp  Packet.hpp
hw3/source/: AgarClient.cpp  AgarGame.cpp  AgarServer.cpp
hw4/: CMakeLists.txt
hw4/include/: AgarClient.hpp  AgarGame.hpp  AgarGameView.hpp  AgarServer.hpp
hw4/source/: AgarClient.cpp  AgarGameView.cpp  AgarServer.cpp
hw5/: CMakeLists.txt
hw5/include/: AgarClient.hpp  AgarGame.hpp  DeltaComperesser.hpp  Packet.hpp
hw5/source/: AgarClient.cpp  AgarGame.cpp  AgarServer.cpp
hw6/: CMakeLists.txt  main_client.cpp  main_lobby.cpp  main_play_server.cpp
hw6/include/: AgarClient.hpp  AgarGame.hpp  AgarServer.hpp  GameEntity.hpp  LobbyServer.hpp  Packet.hpp  Server.hpp
hw6/source/: AgarClient.cpp  AgarGame.cpp  AgarServer.cpp  LobbyServer.cpp
